Fix chrome-specific overflow value

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,6 +14,7 @@ body, #__next {
   height: 100vh;
   background-color: lightgrey;
   display: grid;
+  overflow-y: auto;
   overflow-y: overlay;
   grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
   grid-auto-rows: 300px;
